--- a/index.html
+++ b/index.html
@@ -22,25 +22,24 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-    <section class="wrapper">
-		<div class="container">
-			<img id="qr" src="./images/image-qr-code.png" alt="QR Code" />
-			<div class="text">
-				<h1>Improve your front-end skills by building projects</h1>
+		<section class="wrapper">
+			<div class="container">
+				<img class="qr" src="./images/image-qr-code.png" alt="QR Code" />
+				<div class="text">
+					<h1>Improve your front-end skills by building projects</h1>
 
-				<p>
-					Scan the QR code to visit Frontend Mentor and take your coding skills
-					to the next level
-				</p>
+					<p>
+						Scan the QR code to visit Frontend Mentor and take your coding
+						skills to the next level
+					</p>
+				</div>
 			</div>
-		</div>
-    </section>
+		</section>
 		<div class="attribution">
 			Challenge by
 			<a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
 				>Frontend Mentor</a
 			>. Coded by <a href="#">Tristen Dav</a>.
 		</div>
-    
 	</body>
 </html>
